--- a/tests/adapter/bluetooth/BUILD.gn
+++ b/tests/adapter/bluetooth/BUILD.gn
@@ -156,7 +156,7 @@ group("unittest") {
   deps = [
     ":AdapterBleGattClientTest",
     ":AdapterBleGattServerTest",
-    ":AdapterBleGattTest",
+    # ":AdapterBleGattTest",
     ":AdapterBtCommonTest",
     ":AdapterBtUtilsTest",
   ]
