--- a/tests/core/authentication/BUILD.gn
+++ b/tests/core/authentication/BUILD.gn
@@ -444,7 +444,7 @@ group("unittest") {
     ":AuthHichainTest",
     ":AuthOtherTest",
     ":AuthTcpConnectionTest",
-    ":AuthTest",
+    # ":AuthTest",
 
     # ":AuthTestCallBackTest",
   ]
