--- a/tests/core/transmission/trans_channel/tcp_direct/BUILD.gn
+++ b/tests/core/transmission/trans_channel/tcp_direct/BUILD.gn
@@ -388,9 +388,9 @@ group("unittest") {
   testonly = true
   deps = [
     ":TransCoreTcpDirectTest",
-    ":TransServerTcpDirectTest",
+    # ":TransServerTcpDirectTest",
     ":TransTcpDirectMessageAppendTest",
     ":TransTcpDirectMessageTest",
-    ":TransTcpDirectP2pTest",
+    # ":TransTcpDirectP2pTest",
   ]
 }
