--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -341,8 +341,7 @@ if (defined(ohos_lite)) {
       ":ClientTransChannelManagerTest",
       ":ClientTransPendingTest",
       ":ClientTransProxyFileCommonTest",
-
-      # ":ClientTransProxyFileManagerTest",
+      ":ClientTransProxyFileManagerTest",
       ":ClientTransProxyManagerTest",
       ":ClientTransSessionImplTest",
       ":ClientTransUdpManagerStaticTest",
