--- a/tests/core/authentication/BUILD.gn
+++ b/tests/core/authentication/BUILD.gn
@@ -75,9 +75,11 @@ ohos_unittest("AuthTest") {
 ohos_unittest("AuthEnhanceMockTest") {
   module_out_path = module_output_path
   sources = [
+    "$dsoftbus_root_path/core/adapter/authentication/src/lnn_extdata_config_virtual.c",
     "$dsoftbus_root_path/core/authentication/src/auth_common.c",
     "$dsoftbus_root_path/core/authentication/src/auth_connection.c",
     "$dsoftbus_root_path/core/authentication/src/auth_hichain.c",
+    "$dsoftbus_root_path/core/authentication/src/auth_hichain_adapter.c",
     "$dsoftbus_root_path/core/authentication/src/auth_interface.c",
     "$dsoftbus_root_path/core/authentication/src/auth_manager.c",
     "$dsoftbus_root_path/core/authentication/src/auth_request.c",
@@ -85,12 +87,17 @@ ohos_unittest("AuthEnhanceMockTest") {
     "$dsoftbus_root_path/core/authentication/src/auth_session_key.c",
     "$dsoftbus_root_path/core/authentication/src/auth_session_message.c",
     "$dsoftbus_root_path/core/authentication/src/auth_tcp_connection.c",
+    "$dsoftbus_root_path/core/authentication/src/virtual/auth_device_common_key_virtual.c",
     "$dsoftbus_root_path/core/authentication/src/virtual/auth_meta_manager_virtual.c",
     "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_cipherkey_manager_virtual.c",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_device_info_recovery_virtual.c",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_feature_capability.c",
+    "$dsoftbus_root_path/core/bus_center/utils/src/lnn_compress.c",
     "$dsoftbus_root_path/core/bus_center/utils/src/lnn_state_machine.c",
     "$dsoftbus_root_path/tests/core/bus_center/mock_common/src/lnn_connection_mock.cpp",
     "$dsoftbus_root_path/tests/core/bus_center/mock_common/src/lnn_hichain_mock.cpp",
     "$dsoftbus_root_path/tests/core/bus_center/mock_common/src/lnn_socket_mock.cpp",
+    "unittest/auth_common_mock.cpp",
     "unittest/auth_net_ledger_mock.cpp",
     "unittest/auth_test_enhance.cpp",
   ]
@@ -138,6 +145,7 @@ ohos_unittest("AuthEnhanceMockTest") {
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/heartbeat/include",
     "$dsoftbus_root_path/core/adapter/authentication/include",
     "$dsoftbus_root_path/core/bus_center/service/include",
+    "$dsoftbus_root_path/core/connection/ble/include",
   ]
 
   deps = [
@@ -166,9 +174,11 @@ ohos_unittest("AuthEnhanceMockTest") {
 ohos_unittest("AuthTestCallBackTest") {
   module_out_path = module_output_path
   sources = [
+    "$dsoftbus_root_path/core/adapter/authentication/src/lnn_extdata_config_virtual.c",
     "$dsoftbus_root_path/core/authentication/src/auth_common.c",
     "$dsoftbus_root_path/core/authentication/src/auth_connection.c",
     "$dsoftbus_root_path/core/authentication/src/auth_hichain.c",
+    "$dsoftbus_root_path/core/authentication/src/auth_hichain_adapter.c",
     "$dsoftbus_root_path/core/authentication/src/auth_interface.c",
     "$dsoftbus_root_path/core/authentication/src/auth_manager.c",
     "$dsoftbus_root_path/core/authentication/src/auth_request.c",
@@ -176,12 +186,17 @@ ohos_unittest("AuthTestCallBackTest") {
     "$dsoftbus_root_path/core/authentication/src/auth_session_key.c",
     "$dsoftbus_root_path/core/authentication/src/auth_session_message.c",
     "$dsoftbus_root_path/core/authentication/src/auth_tcp_connection.c",
+    "$dsoftbus_root_path/core/authentication/src/virtual/auth_device_common_key_virtual.c",
     "$dsoftbus_root_path/core/authentication/src/virtual/auth_meta_manager_virtual.c",
     "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_cipherkey_manager_virtual.c",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_device_info_recovery_virtual.c",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_feature_capability.c",
+    "$dsoftbus_root_path/core/bus_center/utils/src/lnn_compress.c",
     "$dsoftbus_root_path/core/bus_center/utils/src/lnn_state_machine.c",
     "$dsoftbus_root_path/tests/core/bus_center/mock_common/src/lnn_connection_mock.cpp",
     "$dsoftbus_root_path/tests/core/bus_center/mock_common/src/lnn_hichain_mock.cpp",
     "$dsoftbus_root_path/tests/core/bus_center/mock_common/src/lnn_socket_mock.cpp",
+    "unittest/auth_common_mock.cpp",
     "unittest/auth_net_ledger_mock.cpp",
     "unittest/auth_test_mock.cpp",
   ]
@@ -229,6 +244,7 @@ ohos_unittest("AuthTestCallBackTest") {
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/heartbeat/include",
     "$dsoftbus_root_path/core/bus_center/service/include",
     "$dsoftbus_root_path/core/adapter/authentication/include",
+    "$dsoftbus_root_path/core/connection/ble/include",
   ]
 
   deps = [
@@ -440,13 +456,12 @@ ohos_unittest("AuthHichainTest") {
 group("unittest") {
   testonly = true
   deps = [
-    # ":AuthEnhanceMockTest",
+    ":AuthEnhanceMockTest",
     ":AuthHichainTest",
     ":AuthOtherTest",
     ":AuthTcpConnectionTest",
     ":AuthTest",
-
-    # ":AuthTestCallBackTest",
+    ":AuthTestCallBackTest",
   ]
 }
 
