--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -422,6 +422,7 @@ ohos_unittest("LNNNetBuilderMockTest") {
   deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/frame:softbus_server",
     "//third_party/googletest:gmock",
     "//third_party/googletest:gtest_main",
   ]
@@ -937,6 +938,7 @@ ohos_unittest("LNNLedgerMockTest") {
     "$dsoftbus_root_path/core/connection/p2p/interface",
     "$dsoftbus_root_path/core/connection/p2p/common/include",
     "$dsoftbus_root_path/core/authentication/interface",
+    "$dsoftbus_root_path/core/authentication/include",
     "$dsoftbus_root_path/core/bus_center/interface",
     "$dsoftbus_root_path/core/bus_center/utils/include",
     "$dsoftbus_root_path/interfaces/kits/bus_center",
@@ -957,6 +959,7 @@ ohos_unittest("LNNLedgerMockTest") {
   deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/frame:softbus_server",
     "//third_party/googletest:gmock",
     "//third_party/googletest:gtest_main",
   ]
@@ -1531,15 +1534,15 @@ group("unittest") {
     ":LNNLaneLinkMockTest",
     ":LNNLaneMockTest",
 
-    # ":LNNLedgerMockTest",
+    ":LNNLedgerMockTest",
     ":LNNMetaNodeLedgerTest",
 
-    # ":LNNNetBuilderMockTest",
+    ":LNNNetBuilderMockTest",
     ":LNNNetBuilderTest",
     ":LNNNetLedgerCommonTest",
     ":LNNNetworkInfoTest",
 
-    # ":LNNNetworkManagerMockTest",
+    ":LNNNetworkManagerMockTest",
     ":LNNNodeWeightTest",
     ":LNNP2pInfoTest",
     ":LNNSyncInfoManagerTest",
