--- a/tests/core/discovery/ble/softbus_ble_mock/BUILD.gn
+++ b/tests/core/discovery/ble/softbus_ble_mock/BUILD.gn
@@ -55,6 +55,7 @@ ohos_unittest("DiscBleTest") {
     "$dsoftbus_root_path/core/discovery/ble/softbus_ble/src",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
     "$dsoftbus_root_path/core/adapter/bus_center/include",
+    "//base/security/huks/interfaces/inner_api/huks_standard/main/include",
   ]
   include_dirs += test_utils_inc
 
