--- a/tests/core/connection/BUILD.gn
+++ b/tests/core/connection/BUILD.gn
@@ -29,6 +29,9 @@ group("unittest") {
   if (dsoftbus_feature_conn_tcp) {
     deps += [ "tcp:TcpManagerTest" ]
   }
+  if (softbus_communication_wifi_feature) {
+    deps += [ "wifi_direct:WifiDirectUtilsTest" ]
+  }
 }
 
 group("fuzztest") {
