--- a/tests/core/connection/BUILD.gn
+++ b/tests/core/connection/BUILD.gn
@@ -24,7 +24,10 @@ group("unittest") {
     deps += [ "br:ConnectionBrTest" ]
   }
   if (support_bluetooth && dsoftbus_feature_conn_ble) {
-    deps += [ "ble:ConnectionBleTest" ]
+    deps += [
+      "ble:ConnectionBleSwitchTest",
+      "ble:ConnectionBleTest",
+    ]
   }
   if (dsoftbus_feature_conn_tcp) {
     deps += [ "tcp:TcpManagerTest" ]
