fix: add test case
Signed-off-by: liangjunhao <liangjunhao10@huawei.com>

--- a/adapter/default_config/feature_config/mini/config.gni
+++ b/adapter/default_config/feature_config/mini/config.gni
@@ -19,6 +19,7 @@ declare_args() {
   dsoftbus_feature_conn_br = false
   dsoftbus_feature_conn_ble = false
   dsoftbus_feature_conn_p2p = false
+  dsoftbus_feature_conn_wifi = true
 
   dsoftbus_feature_protocol_newip = false
 
