--- a/tests/core/connection/BUILD.gn
+++ b/tests/core/connection/BUILD.gn
@@ -32,8 +32,8 @@ group("unittest") {
   if (dsoftbus_feature_conn_tcp) {
     deps += [ "tcp:TcpManagerTest" ]
   }
-  if (softbus_communication_wifi_feature) {
-    deps += [ "wifi_direct:WifiDirectUtilsTest" ]
+  if (dsoftbus_feature_conn_wifi) {
+    deps += [ "wifi_direct:WifiDirectTest" ]
   }
 }
 
