--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -110,6 +110,7 @@ lnn_mock_test_include_dirs = [
   "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
   "$dsoftbus_root_path/core/bus_center/utils/include",
   "$dsoftbus_root_path/core/connection/wifi_direct",
+  "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single",
 ]
 
 lnn_mock_test_deps = [
