--- a/tests/core/connection/ble/BUILD.gn
+++ b/tests/core/connection/ble/BUILD.gn
@@ -15,9 +15,7 @@ import("//build/test.gni")
 import("../../../../dsoftbus.gni")
 
 module_output_path = "dsoftbus/connection"
-
-ohos_unittest("ConnectionBleTest") {
-  module_out_path = module_output_path
+config("softbus_connection_ble_test_config") {
   include_dirs = [
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/interfaces/kits/discovery",
@@ -37,6 +35,16 @@ ohos_unittest("ConnectionBleTest") {
     "//third_party/googletest/googletest/include",
     "//third_party/googletest/googletest/src",
     "//third_party/bounds_checking_function/include",
+    "$dsoftbus_root_path/test/core/connection/ble",
+  ]
+}
+
+ohos_unittest("ConnectionBleTest") {
+  module_out_path = module_output_path
+  public_configs = [ ":softbus_connection_ble_test_config" ]
+  sources = [
+    "connection_ble_mock.cpp",
+    "connection_ble_test.cpp",
   ]
 
   deps = [
@@ -52,24 +60,34 @@ ohos_unittest("ConnectionBleTest") {
     "c_utils:utils",
     "hilog:libhilog",
   ]
-  sources = [ "connection_ble_test.cpp" ]
 }
 
 ohos_unittest("ConnectionBleSwitchTest") {
   module_out_path = module_output_path
-  include_dirs = [
-    "$dsoftbus_root_path/interfaces/kits/common",
-    "$dsoftbus_root_path/interfaces/kits/discovery",
-    "$dsoftbus_root_path/interfaces/kits/bus_center",
-    "$softbus_adapter_common/include",
-    "$softbus_adapter_common/net/bluetooth/include",
-    "$dsoftbus_root_path/core/common/include",
-    "$dsoftbus_root_path/core/connection/interface",
-    "$dsoftbus_root_path/core/connection/manager",
-    "$dsoftbus_root_path/core/connection/ble/include",
-    "$dsoftbus_root_path/core/bus_center/interface",
-    "$dsoftbus_root_path/core/discovery/manager/include",
-    "//third_party/bounds_checking_function/include",
+  public_configs = [ ":softbus_connection_ble_test_config" ]
+  sources = [ "connection_ble_switch_test.cpp" ]
+
+  deps = [
+    "$dsoftbus_root_path/adapter:softbus_adapter",
+    "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/frame:softbus_server",
+    "//third_party/bounds_checking_function:libsec_shared",
+    "//third_party/googletest:gmock_main",
+    "//third_party/googletest:gtest_main",
+  ]
+
+  external_deps = [
+    "c_utils:utils",
+    "hilog:libhilog",
+  ]
+}
+
+ohos_unittest("BleConnectionServiceTest") {
+  module_out_path = module_output_path
+  public_configs = [ ":softbus_connection_ble_test_config" ]
+  sources = [
+    "ble_service_connection_test.cpp",
+    "connection_ble_mock.cpp",
   ]
 
   deps = [
@@ -85,5 +103,4 @@ ohos_unittest("ConnectionBleSwitchTest") {
     "c_utils:utils",
     "hilog:libhilog",
   ]
-  sources = [ "connection_ble_switch_test.cpp" ]
 }
