--- a/core/connection/ble/conn_ble.gni
+++ b/core/connection/ble/conn_ble.gni
@@ -35,6 +35,7 @@ if (!support_bluetooth) {
   ble_connection_src = [
     "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_direct_virtual.c",
     "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_virtual.c",
+    "$dsoftbus_root_path/adapter/common/net/bluetooth/common/softbus_adapter_bt_common_virtual.c",
   ]
   ble_connection_inc = [
     "$dsoftbus_root_path/adapter/common/net/bluetooth/include",
@@ -46,6 +47,7 @@ if (!support_bluetooth) {
     ble_connection_src = [
       "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_direct_virtual.c",
       "$dsoftbus_root_path/core/connection/ble/src/softbus_conn_ble_virtual.c",
+      "$dsoftbus_root_path/adapter/common/net/bluetooth/common/softbus_adapter_bt_common_virtual.c",
     ]
     ble_connection_inc = [
       "$dsoftbus_root_path/adapter/common/net/bluetooth/include",
