--- a/tests/core/bus_center/test/BUILD.gn
+++ b/tests/core/bus_center/test/BUILD.gn
@@ -156,6 +156,55 @@ ohos_unittest("HeartBeatFSMTest") {
   }
 }
 
+ohos_unittest("HeartBeatStrategyTest") {
+  module_out_path = module_output_path
+  sources = [ "$dsoftbus_root_path/tests/core/bus_center/test/heartbeat/hb_strategy_test.cpp" ]
+
+  include_dirs = [
+    "$dsoftbus_root_path/adapter/common/include",
+    "$dsoftbus_root_path/core/adapter/bus_center/include",
+    "$dsoftbus_root_path/core/authentication/interface",
+    "$dsoftbus_root_path/core/common/include",
+    "$dsoftbus_root_path/core/bus_center/interface",
+    "$dsoftbus_root_path/core/bus_center/service/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/heartbeat/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/heartbeat/src",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
+    "$dsoftbus_root_path/core/bus_center/utils/include",
+    "$dsoftbus_root_path/core/discovery/interface",
+    "$dsoftbus_root_path/core/discovery/manager/include",
+    "$dsoftbus_root_path/tests/core/bus_center/test/mock/include",
+  ]
+
+  deps = [
+    "$dsoftbus_root_path/adapter:softbus_adapter",
+    "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/frame:softbus_server",
+    "//third_party/googletest:gmock",
+    "//third_party/googletest:gtest_main",
+  ]
+
+  if (is_standard_system) {
+    external_deps = [
+      "device_auth:deviceauth_sdk",
+      "hilog:libhilog",
+    ]
+  } else {
+    external_deps = [
+      "hilog:libhilog",
+      "huks:libhukssdk",
+    ]
+  }
+  external_deps += [
+    "c_utils:utils",
+    "ipc:ipc_core",
+  ]
+}
+
 ohos_unittest("ClientProxyTest") {
   module_out_path = "dsoftbus/bus_center"
   sources = [
@@ -263,5 +312,6 @@ group("unittest") {
     ":ClientProxyTest",
     ":HeartBeatFSMTest",
     ":HeartBeatMediumTest",
+    ":HeartBeatStrategyTest",
   ]
 }
